chore: update distr organization name
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -213,7 +213,7 @@ import distr from '../assets/distr-brand.svg';
             <Icon name="x.com" class="w-5 h-5" />
           </a>
           <a
-            href="https://github.com/glasskube/distr"
+            href="https://github.com/distr-sh/distr"
             target="_blank"
             rel="noopener noreferrer"
             class="text-gray-400 hover:text-gray-600 dark:hover:text-gray-300 transition-colors">
