--- a/src/components/overwrites/SocialIcons.astro
+++ b/src/components/overwrites/SocialIcons.astro
@@ -9,7 +9,7 @@ import GitHubStarButton from '../common/GitHubStarButton.astro';
 </Default>
 
 <div class="hidden lg:block pt-2">
-  <GitHubStarButton repo="glasskube/distr" />
+  <GitHubStarButton repo="distr-sh/distr" />
 </div>
 <a
   href="https://cal.glasskube.com/team/gk/demo"
