feat: add status page link
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -174,7 +174,7 @@ import distr from '../assets/distr-brand.svg';
         </ul>
       </div>
 
-      {/* Legal */}
+      {/* Legal & Status */}
       <div>
         <h3 class="text-sm font-medium text-gray-900 dark:text-white mb-4">
           Partner
@@ -187,6 +187,20 @@ import distr from '../assets/distr-brand.svg';
               rel="noopener noreferrer"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
               Y Combinator
+            </a>
+          </li>
+        </ul>
+
+        <h3 class="text-sm font-medium text-gray-900 dark:text-white mb-4 mt-8">
+          Distr Status page
+        </h3>
+        <ul class="space-y-3 text-sm list-none pl-0">
+          <li>
+            <a
+              href="https://distrstatus.com/"
+              target="_blank"
+              class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
+              distrstatus.com
             </a>
           </li>
         </ul>
