--- a/src/components/overwrites/SocialIcons.astro
+++ b/src/components/overwrites/SocialIcons.astro
@@ -1,5 +1,4 @@
 ---
-import type {Props} from '@astrojs/starlight/props';
 import Default from '@astrojs/starlight/components/SocialIcons.astro';
 import GitHubStarButton from '../common/GitHubStarButton.astro';
 ---
@@ -14,7 +13,7 @@ import GitHubStarButton from '../common/GitHubStarButton.astro';
 <a
   href="https://cal.glasskube.com/team/gk/demo"
   target="_blank"
-  class="relative no-underline text-xs inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg no-underline group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
+  class="relative no-underline text-xs inline-flex items-center justify-center p-0.5 overflow-hidden font-medium text-gray-900 rounded-lg group bg-linear-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
   <span
     class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
     Book Demo
@@ -23,7 +22,7 @@ import GitHubStarButton from '../common/GitHubStarButton.astro';
 
 <a
   href="/onboarding/"
-  class="text-white no-underline text-xs bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg px-5 py-2.5 text-center">
+  class="text-white no-underline text-xs bg-linear-to-br from-purple-600 to-blue-500 hover:bg-linear-to-b focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg px-5 py-2.5 text-center">
   Start free trial
 </a>
 
