--- a/src/components/overwrites/SiteTitle.astro
+++ b/src/components/overwrites/SiteTitle.astro
@@ -6,8 +6,6 @@
 import Default from '@astrojs/starlight/components/SiteTitle.astro';
 import {Icon} from '@astrojs/starlight/components';
 import {links} from '~/data/navigation';
-
-const curLocale = Astro.props.locale;
 ---
 
 <>
@@ -17,18 +15,7 @@ const curLocale = Astro.props.locale;
     <label>
       <select aria-label="Menu">
         <option value="" disabled selected>Menu</option>
-        {
-          links.map(link => (
-            <option
-              value={
-                link.transfer && curLocale
-                  ? `/${curLocale}${link.value}`
-                  : link.value
-              }
-              set:html={link.title}
-            />
-          ))
-        }
+        {links.map(link => <option value={link.value} set:html={link.title} />)}
       </select>
       <Icon name="down-caret" class="icon caret" />
     </label>
