--- a/src/components/overwrites/ThemeSelect.astro
+++ b/src/components/overwrites/ThemeSelect.astro
@@ -18,15 +18,15 @@ import {Icon} from '@astrojs/starlight/components';
           : themeMode;
       document.documentElement.dataset.theme = theme;
       document.documentElement.dataset.themeMode = themeMode;
-      this.handleMouseDown = this.handleMouseDown.bind(this);
+      this.handleClick = this.handleClick.bind(this);
     }
     connectedCallback() {
-      this.addEventListener('click', this.handleMouseDown);
+      this.addEventListener('click', this.handleClick);
     }
     disconnectedCallback() {
-      this.removeEventListener('click', this.handleMouseDown);
+      this.removeEventListener('click', this.handleClick);
     }
-    private handleMouseDown(e: MouseEvent) {
+    private handleClick(e: MouseEvent) {
       const currentTheme = localStorage.getItem('starlight-theme') || 'auto';
       let newTheme: string;
 
