--- a/src/pages/case-studies/index.astro
+++ b/src/pages/case-studies/index.astro
@@ -1,6 +1,6 @@
 ---
 import StarlightLayout from '~/layouts/StarlightLayout.astro';
-import CTASection from '~/components/home/CTASection.astro';
+import SignUpCta from '~/components/cta/standalone/SignUpCta.astro';
 import NewsletterSection from '~/components/home/NewsletterSection.astro';
 import {Icon} from 'astro-icon/components';
 import MetricsSection from '~/components/home/MetricsSection.astro';
@@ -86,7 +86,7 @@ const description = 'Customer success stories using Distr';
 
   <MetricsSection />
 
-  <CTASection />
+  <SignUpCta />
 
   <NewsletterSection />
 </StarlightLayout>
