--- a/src/pages/compare/index.astro
+++ b/src/pages/compare/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '~/layouts/StarlightLayout.astro';
-import CTASection from '~/components/home/CTASection.astro';
+import SignUpCta from '~/components/cta/standalone/SignUpCta.astro';
 ---
 
 <Layout
@@ -35,5 +35,5 @@ import CTASection from '~/components/home/CTASection.astro';
       </div>
     </section>
   </div>
-  <CTASection />
+  <SignUpCta />
 </Layout>
