--- a/src/pages/glossary/[...slug].astro
+++ b/src/pages/glossary/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import {getCollection, render} from 'astro:content';
 import Layout from '~/layouts/StarlightLayout.astro';
-import CTAGroup from '~/components/buttons/CTAGroup.astro';
+import WhitePaperCta from '~/components/cta/standalone/WhitePaperCta.astro';
 import type {GlossaryEntryConfig} from '~/content.config';
 
 export async function getStaticPaths() {
@@ -55,5 +55,5 @@ const {title, description} = entry.data as GlossaryEntryConfig;
       </article>
     </div>
   </div>
-  <CTAGroup />
+  <WhitePaperCta />
 </Layout>
