--- a/src/pages/white-paper/building-blocks/index.astro
+++ b/src/pages/white-paper/building-blocks/index.astro
@@ -2,7 +2,7 @@
 import StarlightLayout from '~/layouts/StarlightLayout.astro';
 import WhitePaperForm from '~/components/WhitePaperForm.tsx';
 import TestimonialsSection from '~/components/home/TestimonialsSection.astro';
-import CTASection from '~/components/home/CTASection.astro';
+import SignUpCta from '~/components/cta/standalone/SignUpCta.astro';
 import {Image} from 'astro:assets';
 import whitepaperImage from '~/assets/white-paper/building-blocks-teaser.png';
 
@@ -55,7 +55,7 @@ const DESCRIPTION =
     <TestimonialsSection />
 
     <!-- CTA Section -->
-    <CTASection />
+    <SignUpCta />
   </div>
 </StarlightLayout>
 
