--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import FeaturesSection from '../components/home/FeaturesSection.astro';
 import ProductsSection from '../components/home/ProductsSection.astro';
 import VideoSection from '../components/home/VideoSection.astro';
 import TestimonialsSection from '../components/home/TestimonialsSection.astro';
-import CTASection from '../components/home/CTASection.astro';
+import SignUpCta from '~/components/cta/standalone/SignUpCta.astro';
 import NewsletterSection from '../components/home/NewsletterSection.astro';
 import StarlightLayout from '../layouts/StarlightLayout.astro';
 ---
@@ -19,6 +19,6 @@ import StarlightLayout from '../layouts/StarlightLayout.astro';
   <ProductsSection />
   <VideoSection />
   <TestimonialsSection />
-  <CTASection />
+  <SignUpCta />
   <NewsletterSection />
 </StarlightLayout>
